# Network-Drift-Detection-Tool

./: .dockerignore  .env.example  .gitignore  404.html  CONTRIBUTING.md  README.md  alembic.ini  devices.example.yml  docker-compose.yml  dockerfile  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
PROJECT_PLAN/: index.html
PROPOSED_ADDITIONS/: index.html
ROADMAP_POST_V2.5/: index.html
contributing/: index.html
docs/: PROJECT_PLAN.md  PROPOSED_ADDITIONS.md  ROADMAP_POST_V2.5.md  contributing.md  index.md  lab.md  schema-v0.2-proposal.md  schema-v0.3-proposal.md  schema-v1.0-proposal.md  schema.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: Dashboard.css  Dashboard.jsx  Dashboard.test.jsx  index.css
helm/netdrift/: Chart.yaml  values.yaml
lab/: index.html  seed_netbox.py  topology.yml
migrations/: env.py
schema/: index.html
schema-v0.3-proposal/: index.html
schema-v1.0-proposal/: index.html
search/: search_index.json
tests/: test_api.py  test_applier_registry.py  test_arista.py  test_arista_applier.py  test_auto_apply.py  test_cisco.py  test_cisco_applier.py  test_cli.py  test_database.py  test_device_api.py  test_device_settings.py  test_diagnose.py  test_differ.py  test_fingerprint.py  test_fixtures.py  test_junos_applier.py  test_junos_collector.py  test_known_issues.py  test_nautobot_client.py  test_nokia.py  test_nokia_applier.py  test_pipeline.py  test_registry.py  test_remediation_api.py  test_scheduler.py  test_storage.py  test_syslog_receiver.py  test_webhook.py
(+68 files in other folders)
